fix table alignment, make simulator more realistic

--- a/static/common.css
+++ b/static/common.css
@@ -26,3 +26,7 @@ table, th, td {
 div#table {
   padding: 20px;
 }
+
+td {
+  text-align: right;
+}
